fix toolbar z-index

--- a/sample/styles.css
+++ b/sample/styles.css
@@ -592,7 +592,7 @@ figure.table {
   }
   .document-editor__toolbar {
     /* Make sure the toolbar container is always above the editable. */
-    z-index: 1;
+    /* z-index: 1; */
 
     /* Create the illusion of the toolbar floating over the editable. */
     box-shadow: 0 0 5px hsla(0, 0%, 0%, 0.2);
